dashlog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashlog-deployment
  labels:
    app: dashlog
spec:
  selector:
    matchLabels:
      app: dashlog
  template:
    metadata:
      labels:
        app: dashlog
    spec:
      containers:
        - name: dashlog
          image: dashlog:latest
          ports:
            - containerPort: 7723

---
apiVersion: v1
kind: Service
metadata:
  name: dashlog-service
  labels:
    app: dashlog
spec:
  selector:
    app: dashlog
  type: LoadBalancer
  ports:
    - targetPort: 7723
      port: 7723

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashlog-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: dashlog-service
              servicePort: 7723
